# omniapp

./: .gitignore  .gitmodules  README.md  docker-compose.test.yml  docker-compose.yml  package.json
apps/api/: .pre-commit-config.yaml  Dockerfile  Dockerfile.test  alembic.ini  package.json  pyproject.toml
apps/api/app/: constants.py  main.py
apps/api/app/config/: database.py  env.py
apps/api/app/models/: __init__.py  base.py  organization.py  shift.py  subscription.py  user.py  weeklyhours.py  worksite.py
apps/api/app/utils/: email.py  email_template.py  jwt.py  password.py  soft_delete.py
apps/api/migrations/: env.py  env_back.py
apps/api/migrations/versions/: 117a3f6ce960_add_worksite.py  13892cce5888_add_availability.py  163867c718b8_create_weekly_hours_table.py  (+12 more)
apps/api/scripts/: test.sh
apps/api/tests/: .env.test  README.md  conftest.py  test_auth.py  test_availability_services.py  test_basic.py  test_biweekly_payment_calculation.py  test_constants.py  test_database_config.py  test_dtos.py  test_email_utils.py  test_employee_dashboard_service.py  test_employee_punch_service.py  test_employee_routes.py  test_employee_schedule_service.py  test_environment_config.py  test_exceptions.py  test_hourlist_service.py  test_jwt_utils.py  test_main_app.py  test_models.py  test_organization.py  test_organization_service.py  test_password_utils.py  test_shift_preset_service.py  test_shift_services.py  test_soft_delete.py  test_summary_service.py  test_user_services.py  test_weekly_hours_calculation.py  test_worksite.py  test_worksite_service.py
docs/: README.md  (+1 more)
(+178 files in other folders)
