[project]
name = "shiftbay-api"
version = "1.0.0"
description = "ShiftBay API - FastAPI service for employee management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "fastapi>=0.115.8",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.4",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "pyjwt>=2.10.1",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=49",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
